Fixed spacing of announcements on feed

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,7 @@
 
 .row {
   background-color: transparent;
+  margin-top: 20px;
 }
 
 //.navbar {
